Change position from absolute to fixed in groupChatWrap

--- a/src/styles/groupChat.module.scss
+++ b/src/styles/groupChat.module.scss
@@ -67,7 +67,7 @@
 }
 
 .groupChatWrap {
-  position: absolute;
+  position: fixed;
   top: 10rem;
   width: 100%;
   z-index: 1000;
